--- a/roles/setup/tasks/homebrew.yml
+++ b/roles/setup/tasks/homebrew.yml
@@ -2,15 +2,15 @@
 # install and update homebrew and cask
 
 - name: ensure homebrew is installed
-      stat:
-        path: "/usr/local/bin/brew"
-      register: "homebrew_check"
+  stat:
+    path: "/usr/local/bin/brew"
+  register: "homebrew_check"
 
 - name: install homebrew
   when: not homebrew_check.stat.exists
   shell: 'yes | /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"' 
   args:
-    creates: /usr/local/bin/brew
+    creates: "/usr/local/bin/brew"
 
 - name: ensure homebrew is updated 
   homebrew:
@@ -18,7 +18,7 @@
     update_homebrew: yes
     upgrade_all: yes
 
--name: install homebrew packages
+- name: install homebrew packages
   homebrew:
     name: "{{ homebrew.packages }}"
     state: present
