--- a/roles/setup/tasks/vim.yml
+++ b/roles/setup/tasks/vim.yml
@@ -3,8 +3,10 @@
 - name: link vimrc
   file:
     src: ".vimrc"
-    dest: "~/.vimrc"
+    dest: "$HOME/.vimrc"
     state: link
+    force: yes
+    follow: false
 
 # install/update vim plugins using custom script and Vim's native plugin management
 - name: run vim plugin script
