--- a/roles/setup/tasks/zsh.yml
+++ b/roles/setup/tasks/zsh.yml
@@ -1,17 +1,31 @@
 ---
+- name: set files path
+  set_fact:
+    files_path: "{{ role_path }}/files"
 
 - name: link dotfiles
   file:
-    src: "{{ item }}"
-    dest: "~/{{ item }}"
+    src: "{{ files_path }}/{{ item }}"
+    dest: "${HOME}/{{ item }}"
     state: link
+    force: yes
+    follow: false
   loop:
     - .zshrc 
     - .zsh_aliases
 
 # antibody static loading: https://getantibody.github.io/usage/
 - name: static loading from plugins.txt
-  command: antibody bundle < zsh_plugins.txt > ~/.zsh_plugins
+  shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > ~/.zsh_plugins"
+  args:
+    creates: ~/.zsh_plugins 
 
-- name: Change login shell
-  command: chsh -s /usr/local/bin/zsh
+- name: Get zsh path
+  command: which zsh 
+  register: zsh_path
+
+- name: Switch to zsh
+  user: 
+    name={{ ansible_user_id }} 
+    shell={{ zsh_path.stdout }}
+  become: true
