--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,3 +1,9 @@
+---
+
+- name: set files path
+  set_fact:
+    files_path: "{{ role_path }}/files"
+
 - name: homebrew and application installs
   import_tasks: homebrew.yml
 
