Links iterm and karabiner configs and sets MacOS defaults

--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -16,5 +16,5 @@
 - name: miscellaneous configuration
   import_tasks: misc.yml
 
-# - name: osx defaults
-#   import_tasks: osx.yml
+- name: osx defaults
+  import_tasks: osx.yml
