--- a/roles/setup/tasks/osx.yml
+++ b/roles/setup/tasks/osx.yml
@@ -1,47 +1,52 @@
 ---
 
-- name: show status bar in finder
+# show status bar in finder
+- osx_defaults:
     domain: com.apple.finder
     key: ShowStatusBar
     type: bool
     value: true
     state: present
-
-- name: show status bar in finder
+    
+# show path bar in finder
+- osx_defaults:
     domain: com.apple.finder
     key: ShowPathBar
     type: bool
     value: true
     state: present
 
-- name: do the same as the key is duplicated (spelling mistake)
+# do the same as the key is duplicated (spelling mistake)
+- osx_defaults:
     domain: com.apple.finder
     key: ShowPathbar
     type: bool
     value: true
     state: present
 
-- name: stop spaces rearranging
+# stop spaces rearranging
+- osx_defaults:
     domain: -g com.apple.mouse.dock 
     key: mru-spaces
     type: bool
     value: false
     state: present
 
-- name: enable right click
+# enable right click
+- osx_defaults:
     domain: com.apple.driver.AppleBluetoothMultitouch.mouse
     key: MouseButtonMode
     type: string
     value: TwoButton
     state: present
 
-
-- name: increase mouse speed
-    domain: -g com.apple.mouse.scaling
-    type: int
+# increase mouse speed
+- osx_defaults:
+    key: com.apple.mouse.scaling
+    type: string
     value: 4
     state: present
 
 - name: make Library directory visible
-    command: chflags nohidden ~/Library
+  command: chflags nohidden ~/Library
 
