--- a/roles/setup/tasks/zsh.yml
+++ b/roles/setup/tasks/zsh.yml
@@ -13,9 +13,17 @@
 
 # antibody static loading: https://getantibody.github.io/usage/
 - name: static loading from plugins.txt
-  shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > ~/.zsh_plugins"
-  args:
-    creates: ~/.zsh_plugins 
+  shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > ${HOME}/.zsh_plugins"
+
+- name: Create .zsh directory if it does not exist
+  file:
+    path: ~/.zsh/completion
+    state: directory
+    mode: '0755'
+    recurse: yes
+
+- name: link docker completions
+  script: docker-completion.sh
 
 - name: Get zsh path
   command: which zsh 
