--- a/roles/setup/tasks/zsh.yml
+++ b/roles/setup/tasks/zsh.yml
@@ -10,6 +10,7 @@
   loop:
     - .zshrc 
     - .zsh_aliases
+    - .p10k.zsh
 
 # antibody static loading: https://getantibody.github.io/usage/
 - name: static loading from plugins.txt
