Tidied up, added fzf, rewrote readme

--- a/roles/setup/tasks/homebrew.yml
+++ b/roles/setup/tasks/homebrew.yml
@@ -31,3 +31,6 @@
   homebrew:
     name: "{{ homebrew.packages }}"
     state: present
+
+- name: install fzf keybindings and fuzzy completion
+  shell: $(brew --prefix)/opt/fzf/install
