--- a/roles/setup/vars/main.yml
+++ b/roles/setup/vars/main.yml
@@ -14,7 +14,6 @@ homebrew:
     - kubectl
     - maven
     - minikube
-    - navi
     - node
     - nvm
     - prettyping
@@ -45,4 +44,6 @@ homebrew:
     - karabiner-elements
     - jetbrains-toolbox
     - slack
+    - spotify
+    - spotmenu
     - visual-studio-code
