--- a/roles/setup/tasks/vim.yml
+++ b/roles/setup/tasks/vim.yml
@@ -1,13 +1,17 @@
 ---
 
-- name: link vimrc
+- name: create nvim directory if it does not exist
   file:
-    src: "{{ files_path }}/.vimrc"
-    dest: "$HOME/.vimrc"
+    path: ~/.config/nvim
+    state: directory
+    mode: '0755'
+    recurse: yes
+
+- name: link neovim config
+  file:
+    src: "{{ files_path }}/init.vim"
+    dest: "$HOME/.config/nvim/init.vim"
     state: link
     force: yes
     follow: false
 
-# install/update vim plugins using custom script and Vim's native plugin management
-- name: run vim plugin script
-  script: "vim-plug-man.sh"
