--- a/roles/setup/tasks/osx.yml
+++ b/roles/setup/tasks/osx.yml
@@ -49,11 +49,21 @@
 
 # fixes Rectangle window snap for iTerm2
 - osx_defaults:
-    domain: defaults write com.googlecode.iterm2 
+    domain: com.googlecode.iterm2 
     key: DisableWindowSizeSnap 
     type: integer 
     value: 1
     state: present
+    
+# use standard function keys
+- osx_defaults:
+    key: com.apple.keyboard.fnState
+    type: bool 
+    value: true
+    state: present
+
+- name: map Esc(ape) to Caps Lock
+  command: hidutil property --set '{"UserKeyMapping":[{"HIDKeyboardModifierMappingSrc":0x700000039,"HIDKeyboardModifierMappingDst":0x700000029}]}'
 
 - name: make Library directory visible
   command: chflags nohidden ~/Library
