Removes openJDK brew installs as they always break, preferring a manual install with SDKman instead (to automate in future changes). Adds Flycut for clipboard management

--- a/roles/setup/vars/main.yml
+++ b/roles/setup/vars/main.yml
@@ -42,17 +42,15 @@ homebrew:
     - yarn
     - zsh
   casks:
-    - AdoptOpenJDK/openjdk
     - clementtsang/bottom
     - homebrew/cask-fonts
     - wallix/awless
   applications:
-    - adoptopenjdk8 
-    - adoptopenjdk11
     - discord
     - dashlane
     - docker
     - firefox
+    - flycut
     - font-hack-nerd-font
     - hyper
     - google-chrome
