moving to yadm. configs moved across into v2 directory, ready for initialising yadm and testing.

--- a/roles/setup/vars/main.yml
+++ b/roles/setup/vars/main.yml
@@ -11,9 +11,10 @@ homebrew:
     - exa
     - fd
     - fzf
-    - gradle
     - git
     - go
+    - gping
+    - gradle
     - groovy
     - httpie
     - jq
