--- a/roles/setup/tasks/homebrew.yml
+++ b/roles/setup/tasks/homebrew.yml
@@ -6,9 +6,9 @@
     path: "/usr/local/bin/brew"
   register: "homebrew_check"
 
-- name: install homebrew
-  when: not homebrew_check.stat.exists
-  shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+#- name: install homebrew
+#  when: not homebrew_check.stat.exists
+#  shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
 - name: ensure homebrew is updated 
   homebrew:
