--- a/roles/setup/tasks/zsh.yml
+++ b/roles/setup/tasks/zsh.yml
@@ -14,7 +14,7 @@
 
 # antibody static loading: https://getantibody.github.io/usage/
 - name: static loading from plugins.txt
-  shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > ${HOME}/.zsh_plugins"
+  shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > $HOME/.zsh_plugins"
 
 - name: Create .zsh directory if it does not exist
   file:
