--- a/roles/setup/vars/main.yml
+++ b/roles/setup/vars/main.yml
@@ -1,27 +1,23 @@
 ---
 homebrew:
   packages:
-    - ansible
     - antibody
     - awscli
     - bat
+    - bluesnooze
     - bottom
     - cheat
     - ctop
     - exa
     - fd
     - fzf
-    - gradle
     - git
     - go
-    - groovy
     - httpie
     - jq
     - jrnl
     - derailed/k9s/k9s
-    - kubectl
     - maven
-    - minikube
     - neovim
     - node
     - nvm
@@ -44,16 +40,13 @@ homebrew:
   casks:
     - clementtsang/bottom
     - homebrew/cask-fonts
-    - wallix/awless
   applications:
     - aws-vault
     - discord
-    - dashlane
     - docker
     - firefox
     - flycut
     - font-hack-nerd-font
-    - hyper
     - google-chrome
     - iterm2
     - kap
